fix: symlinks from my ~/.dotfiles

--- a/X11/xorg.conf.d/00-keyboard.conf
+++ b/X11/xorg.conf.d/00-keyboard.conf
@@ -1,1 +1,7 @@
-/home/niraami/.dotfiles/system/etc/X11/xorg.conf.d/00-keyboard.conf
+Section "InputClass"
+	Identifier "system-keyboard"
+	MatchIsKeyboard "on"
+	Option "XkbLayout" "us,sk"
+	Option "XkbVariant" ",qwerty"
+	Option "XkbOptions" "grp:ctrl_alt_toggle"
+EndSection
