committing changes in /etc made by "sudo pacman -S -u -y -y --config /etc/pacman.conf --"
Package changes:
-breeze-icons 5.88.0-1
+breeze-icons 5.88.0-2
-cmake 3.22.0-1
+cmake 3.22.1-1
-cuda 11.5.0-1
-cups 1:2.3.3op2-4
+cuda 11.5.1-1
+cups 1:2.4.0-4
-double-conversion 3.1.5-2
+double-conversion 3.1.6-1
-freetype2 2.11.0-4
+freetype2 2.11.1-1
-glib-networking 1:2.70.0-1
+glib-networking 1:2.70.1-1
-gnome-desktop 1:41.1-1
+gnome-desktop 1:41.2-1
-graphviz 2.49.3-1
+graphviz 2.50.0-1
-imagemagick 7.1.0.16-1
+imagemagick 7.1.0.17-1
-lib32-freetype2 2.11.0-3
+lib32-freetype2 2.11.1-1
-libcups 1:2.3.3op2-4
+libcups 1:2.4.0-4
-linux 5.15.5.arch1-1
+linux 5.15.6.arch2-1
-linux-headers 5.15.5.arch1-1
+linux-headers 5.15.6.arch2-1
-nodejs 17.1.0-2
+nodejs 17.1.0-3
-nvidia 495.44-13
+nvidia 495.44-14
-pango 1:1.50.0-1
+pango 1:1.50.0-3
-qt5-base 5.15.2+kde+r260-1
+qt5-base 5.15.2+kde+r262-1
-vte-common 0.66.1-2
-vte3 0.66.1-2
+vte-common 0.66.2-1
+vte3 0.66.2-1
-wine 6.22-1
+wine 6.23-1
-xxhash 0.8.0-1
+xxhash 0.8.1-1

--- a/cups/cups-files.conf
+++ b/cups/cups-files.conf
@@ -50,10 +50,10 @@ AccessLog /var/log/cups/access_log
 ErrorLog /var/log/cups/error_log
 
 # Location of fonts used by older print filters...
-#FontPath /usr/share/cups/fonts
+#FontPath @CUPS_FONTPATH@
 
 # Location of LPD configuration
-#LPDConfigFile xinetd:///etc/xinetd.d/cups-lpd
+#LPDConfigFile @CUPS_DEFAULT_LPD_CONFIG_FILE@
 
 # Location of the file logging all pages printed by the scheduler and any
 # helper programs; may be the name "syslog". If not an absolute path, the value
@@ -82,7 +82,7 @@ PageLog /var/log/cups/page_log
 #ServerRoot /etc/cups
 
 # Location of Samba configuration file...
-#SMBConfigFile 
+#SMBConfigFile @CUPS_DEFAULT_SMB_CONFIG_FILE@
 
 # Location of scheduler state files...
 #StateDir /run/cups
