--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -19,7 +19,7 @@ Listen localhost:631
 Listen /run/cups/cups.sock
 
 # Show shared printers on the local network.
-Browsing On
+Browsing Yes
 BrowseLocalProtocols dnssd
 
 # Default authentication type, when authentication is required...
@@ -27,6 +27,9 @@ DefaultAuthType Basic
 
 # Web interface setting...
 WebInterface Yes
+
+# Timeout after cupsd exits if idle (applied only if cupsd runs on-demand - with -l)
+IdleExitTimeout 60
 
 # Restrict access to the server...
 <Location />
