gitignore for libvirt VM configs

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ xdg/systemd/**/*.timer
 
 # Ignore libvirt configuration - this is not useful to anyone but me, and it's not even critical
 libvirt/storage/*
+libvirt/qemu/*
