--- a/libvirt/libvirt.conf
+++ b/libvirt/libvirt.conf
@@ -16,3 +16,6 @@
 # (@uri_default also prevents probing of the hypervisor driver).
 #
 #uri_default = "qemu:///system"
+
+unix_sock_group = "libvirt"
+unix_sock_rw_perms = "0770"
